# araza

./: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  biome.json  bun.lockb  package.json  tsconfig.json
app/: bun.lockb  index.html  package.json  tsconfig.app.json  vite.config.ts
app/scripts/: configure.ts  initialize.ts
app/src/: App.css  App.tsx  Cabinet.tsx  Dashboard.tsx  Main.tsx  Welcome.tsx  araza.json  araza.ts  getBalances.ts  index.tsx  transactions.ts  useWallet.ts
control/: Cargo.toml
control/src/: main.rs
daemon/: Cargo.toml
daemon/.sqlx/: query-0e77ea2ab6657ec54f918dafdb279dd915c7893183d46224e5b1f1d664034a42.json  query-1694003712eb9cdca08b637ac5fe7d807f80add2998134fa673f82a8554e0d03.json  query-426c6cb68c5adfe7d1042200f848a320cfd8a773328923e71b092f0af8a1428c.json  query-4b515a1f60aa45a98955f9ea5eb85a27960c0be25d5eae3f9d88da99c1093315.json  query-503e344cb92b886d6c35b94a2bc26c8392e4e22e9b03d8d01c8bb637d56344b9.json  query-5de7b488ccf76b2d4adb9c10e781895c0a1147441d9c89a30d43151b61c768e6.json  query-5e47e6b3fd72d19e4fe6fc2e1c8770e98671d7eada313aa988f56665004c9b02.json  query-6eb4c2e901c088be0209fc220e67fa8e1594c1254f42a0cdff67130fd8ac5934.json  query-762b7f4f0ad6f466b324e67b11d727c5e21bccad891d755501594c9332abe516.json  query-8041a8e4cf7e1c7ed06d4a44a1cbcda084c4f746f9030c9f3c2b577b939b7077.json  query-8d72df00144bcfd01bf2d4f1e8aa86ef189fc31030a6ef0c858e980911a4ddb3.json  query-9f43ba09d869b046f40234b9cddbd9761dfd96b8448051dbfdd23a295ca162ae.json  query-a2d75b310a19b799ee4f5a20c641173a0b0c13e7bdd069232dd4edbb82f3615f.json  query-b907067ce440f7fd76887b147d7cd7a2358994422cfe05eb3dab81177d37881d.json  query-b9ca93f3a24f643ae1a66df839c07a48742c73db7838b6fe1bccfe5ebe314e3f.json  query-f45cc56a2c0ff92fa8500f49e3208820bdf8270f60955044cddfdd2b93acc8ae.json
daemon/migrations/: 20250111000000_base.sql
daemon/src/: conf.rs  cron.rs  main.rs  readout.rs  schema.rs
migrations/: deploy.ts
tests/: araza.ts
(+6 files in other folders)
