[package]
name = "control"
description = "A command-line tool for sending transactions on behalf of the daemon"
version = "0.1.1"
edition = "2021"

[dependencies]
anchor-client  = { version = "0.30.1", features = ["async"] }
serde_json     = { version = "1" }
solana-sdk     = { version = "2.1.9" }
tokio          = { version = "1", features = ["full"] }

araza        = { path = "../programs/araza" }
