[package]
name = "daemon"
version = "0.0.1"
description = "A server-side oracle that provides data to the on-chain program"
edition = "2021"

# `anchor-client` depends on an ancient version of `zeroize`,
# so we cannot keep `sqlx` and `anchor-client` in the same build unit.
# This way we detach the Daemon's deps from the workspace's
# until `anchor-client` is updated to depend on newer `zeroize`:
[workspace]

[dependencies]
bs58                       = { version = "0.5" }
actix-rt                   = { version = "2" }
actix-files                = { version = "0.6" }
actix-web                  = { version = "4" }
bigdecimal                 = { version = "0.4.7" }
dotenvy                    = { version = "0.15" }
ed25519-dalek              = { version = "2" }
serde                      = { version = "1", features = ["derive"] }
serde_json                 = { version = "1" }
tokio                      = { version = "1", features = ["full"] }
tracing                    = { version = "0.1.41" }
tracing-subscriber         = { version = "0.3.19", features = ["env-filter", "std"] }
solana-sdk                 = { version = "2.1.9" }
solana-client              = { version = "2.1.9" }
solana-transaction-status  = { version = "2.1.9" }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "bigdecimal",
  "derive",
  "macros",
  "migrate",
  "time",
  "json",
  "uuid",
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
]
